
ADD_DEFINITIONS(-DGUI)
IF(WIN32)
	ADD_DEFINITIONS(-D__WXMSW__)
ENDIF(WIN32)

IF(BITCOIN_ENABLE_CUDA)
	ADD_DEFINITIONS(-D_BITCOIN_MINER_CUDA_)
	CUDA_ADD_EXECUTABLE(bitcoin WIN32 ${BITCOIN_BASE_SRC} ${BITCOIN_GUI_SRC} ${BITCOIN_CUDA_SRC})
ELSE(BITCOIN_ENABLE_CUDA)
	IF(BITCOIN_ENABLE_OPENCL)
		ADD_DEFINITIONS(-D_BITCOIN_MINER_OPENCL_)
		ADD_EXECUTABLE(bitcoin WIN32 ${BITCOIN_BASE_SRC} ${BITCOIN_GUI_SRC} ${BITCOIN_OPENCL_SRC})
	ELSE(BITCOIN_ENABLE_OPENCL)
		ADD_EXECUTABLE(bitcoin WIN32 ${BITCOIN_BASE_SRC} ${BITCOIN_GUI_SRC})
	ENDIF(BITCOIN_ENABLE_OPENCL)
ENDIF(BITCOIN_ENABLE_CUDA)

IF(BITCOIN_ENABLE_REMOTE_SERVER)
	ADD_DEFINITIONS(-D_BITCOIN_MINER_REMOTE_)
	IF(WIN32)
		ADD_DEFINITIONS(-DFD_SETSIZE=1024)
	ENDIF(WIN32)
ENDIF(BITCOIN_ENABLE_REMOTE_SERVER)

TARGET_LINK_LIBRARIES(bitcoin ${Boost_LIBRARIES} ${wxWidgets_LIBRARIES} ${OPENSSL_LIBRARIES} ${DB_LIBRARIES})
IF(BITCOIN_ENABLE_CUDA)
	TARGET_LINK_LIBRARIES(bitcoin ${CUDA_LIBRARIES})
ENDIF(BITCOIN_ENABLE_CUDA)
IF(BITCOIN_ENABLE_OPENCL)
	TARGET_LINK_LIBRARIES(bitcoin ${OPENCL_LIBRARY})
ENDIF(BITCOIN_ENABLE_OPENCL)
IF(WIN32)
	TARGET_LINK_LIBRARIES(bitcoin winmm.lib shlwapi.lib)
ENDIF(WIN32)
